Typos+added quiz result

--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -24,9 +24,9 @@
       </header>
 
       <form id="parts-quiz" class="quiz">
-        <ol>
+        <ol class="ol">
           <li>
-            <p>What dose CPU stand for?</p>
+            <p>What does CPU stand for?</p>
             <label><input type="radio" name="one" value="Central Processing Unit" />Central Processing Unit</label>
             <label><input type="radio" name="one" value="Centrum Processing Union" />Centrum Processing Union</label>
             <label><input type="radio" name="one" value="Centring Processing Unit" />Centring Processing Unit</label>
@@ -97,6 +97,7 @@
 			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
           </li>
         </ol>
+	<div id="resultatQuiz"></div>
         <button type="button" value="Lock in answers" onclick="validateRadio()">Lock in answers</button>
       </form>
     </section>
