Also in PREVIOUS commit, changes breadcrumb layout.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
 
         <div id="breadcrumbs">
           <ul>
-            <li>...</li>
+            <li>&nbsp;</li>
           </ul>
         </div>
 
