Removed section prefix from prev/next links.

--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Assembling the PC" />
     <meta name="prev_page_uri" content="?section=oss&amp;page=quiz" />
-    <meta name="prev_page_name" content="[Operating Systems] Quiz" />
+    <meta name="prev_page_name" content="Quiz" />
     <meta name="next_page_uri" content="?section=assembly&amp;page=hardware" />
-    <meta name="next_page_name" content="[Assembling the PC] Hardware" />
+    <meta name="next_page_name" content="Hardware" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Assembling the PC</title>
