--- a/pages/assembly/hardware.inc.html
+++ b/pages/assembly/hardware.inc.html
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=assembly" />
     <meta name="prev_page_name" content="Assembling the PC" />
     <meta name="next_page_uri" content="?section=assembly&amp;page=software" />
-    <meta name="next_page_name" content="[Assembling the PC] Software" />
+    <meta name="next_page_name" content="Software" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Assembling the PC: Hardware</title>
