--- a/pages/assembly/software.inc.html
+++ b/pages/assembly/software.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Software" />
     <meta name="prev_page_uri" content="?section=assembly&amp;page=hardware" />
-    <meta name="prev_page_name" content="[Assembling the PC] Hardware" />
+    <meta name="prev_page_name" content="Hardware" />
     <meta name="next_page_uri" content="?section=assembly&amp;page=quiz" />
-    <meta name="next_page_name" content="[Assembling the PC] Quiz" />
+    <meta name="next_page_name" content="Quiz" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Assembling the PC: Software</title>
