--- a/pages/oss/windows.inc.html
+++ b/pages/oss/windows.inc.html
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=oss" />
     <meta name="prev_page_name" content="Operating Systems" />
     <meta name="next_page_uri" content="?section=oss&amp;page=linux" />
-    <meta name="next_page_name" content="[Operating Systems] Linux" />
+    <meta name="next_page_name" content="Linux" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Operating Systems: Windows</title>
@@ -23,13 +23,13 @@
         <h1><a href="#windows">Windows</a></h1>
       </header>
 
-      <p>Windows is a operating system developed by Microsoft. 
-During the growing popularity of graphical user interfaces(GUI) in 1985, Microsoft and Windows found its place in the market. Since then, 
+      <p>Windows is a operating system developed by Microsoft.
+During the growing popularity of graphical user interfaces(GUI) in 1985, Microsoft and Windows found its place in the market. Since then,
 Windows have continually been updated and new versions have been released every few years. Today, Microsoft Windows has grown to own more than 90% of the market share.</p>
       <p>
-        Windows 1.0 was the very first version and it was released in 1985, one year after Mac OS. Windows 1.0 featured components like calculator, 
-calender, clock, control panel, notepad, paint and some other features. In Windows 1.0, only the modal dialog boxes could overlap windows. When Windows 2.0 
-        came in 1987 there were many improvements, among these were keyboard shortcuts, user interface overhaul and overlapping windows. 
+        Windows 1.0 was the very first version and it was released in 1985, one year after Mac OS. Windows 1.0 featured components like calculator,
+calender, clock, control panel, notepad, paint and some other features. In Windows 1.0, only the modal dialog boxes could overlap windows. When Windows 2.0
+        came in 1987 there were many improvements, among these were keyboard shortcuts, user interface overhaul and overlapping windows.
       </p>
       <p>
         Here is a list over all the different versions of Windows:
@@ -50,7 +50,7 @@ calender, clock, control panel, notepad, paint and some other features. In Windo
         <li>Windows 10 (2015)</li>
       </ol>
       <p>
-        Microsoft has not only produced the Windows operating system for computers, but they have also produced mobile versions. Although the mobile 
+        Microsoft has not only produced the Windows operating system for computers, but they have also produced mobile versions. Although the mobile
 versions are not the most popular on the market, it is the third most popular, behind Android and iOS
       </p>
     </section>
