--- a/pages/parts/accessories.inc.html
+++ b/pages/parts/accessories.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Cooling, PSU and Case" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=cooling_psu_case" />
-    <meta name="prev_page_name" content="[Parts] Cooling, PSU and Case" />
+    <meta name="prev_page_name" content="Cooling, PSU and Case" />
     <meta name="next_page_uri" content="?section=parts&amp;page=quiz" />
-    <meta name="next_page_name" content="[Parts] Quiz" />
+    <meta name="next_page_name" content="Quiz" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Accessories</title>
@@ -33,7 +33,7 @@
 
       <p>If you want to pipup your PC LED bars/strips the way to go, they come in many forms and colors!</p>
     </section>
-	
+
 	<section id="accessory_3_wip">
       <header>
         <h1><a href="#accessory_3_wip">Keyboard</a></h1>
@@ -41,7 +41,7 @@
 
       <p>A keyboard is a must, what is important about a keyboard is how you feel about writing on it. Is it good to rest your hands on? Do you like the buttons this is up to you. We have 2 types of keyboard for the normal PC, mechanical and nonmechanical where the best and priciest is the mechanical.</p>
     </section>
-	
+
 	<section id="accessory_4_wip">
       <header>
         <h1><a href="#accessory_4_wip">Mouse</a></h1>
@@ -49,7 +49,7 @@
 
       <p>Like keyboard this is also a must. Same thing here feel is importnat. It exist optical and laser mices, optical use light to track movment and can be used on almost every surface. Laser is very good and precise, but cannot be used on every surface and are a bit more pricey</p>
     </section>
-	
+
 	<section id="accessory_4_wip">
       <header>
         <h1><a href="#accessory_4_wip">Screen</a></h1>
