--- a/pages/parts/cpu_ram.inc.html
+++ b/pages/parts/cpu_ram.inc.html
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=parts" />
     <meta name="prev_page_name" content="Parts" />
     <meta name="next_page_uri" content="?section=parts&amp;page=mb_gpu" />
-    <meta name="next_page_name" content="[Parts] Motherboard and Video Card" />
+    <meta name="next_page_name" content="Motherboard and Video Card" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: CPU and RAM</title>
