--- a/pages/parts/mb_gpu.inc.html
+++ b/pages/parts/mb_gpu.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Motherboard and Video Card" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=cpu_ram" />
-    <meta name="prev_page_name" content="[Parts] CPU and RAM" />
+    <meta name="prev_page_name" content="CPU and RAM" />
     <meta name="next_page_uri" content="?section=parts&amp;page=storage_nic_sc" />
-    <meta name="next_page_name" content="[Parts] Storage, Network Card and Sound Card" />
+    <meta name="next_page_name" content="Storage, Network Card and Sound Card" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Motherboard and Video Card</title>
@@ -26,7 +26,7 @@
       <p>The motherboard is what connects the parts of your PC, the name is a hint to this.</p>
 	  <p>What motherboard you buy isnt that important besides that it supports your CPU and other parts, to match the CPU your motherboard must be of the same platform / sockets as your CPU. Pricer motherboard will do little for the overall performance of your PC, but it can add extra features as more connectors for HDDs, M.2 suppport and more USB connectors.</p>
 	  <p>Motherboard comes in many formfactors as ATX, Micro-ATX, Mini-ATX, Nano-ATX where ATX is the most normal and popular. The difference between them is the size. This mean that you have to check if your case can fit and support the form factor you choose. Smaller motherboard will also dont fit the same amount of connector / features as one bigger.</p>
-	  
+
     </section>
 
     <section id="gpu">
