--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Quiz" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=accessories" />
-    <meta name="prev_page_name" content="[Parts] Accessories" />
+    <meta name="prev_page_name" content="Accessories" />
     <meta name="next_page_uri" content="?section=vendors" />
     <meta name="next_page_name" content="Part Vendors" />
     <meta name="show_breadcrumbs" content="true" />
@@ -37,7 +37,7 @@
             <label><input type="radio" name="two" value="DDR and DDR2" />DDR and DDR2</label>
             <label><input type="radio" name="two" value="DDR, DDR2 and DDR3" />DDR, DDR2 and DDR3</label>
             <label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
-			<br>	 
+			<br>
 			<label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
             <label><input type="radio" name="two" value="DDR3 and DDR4" />DDR3 and DDR4</label>
 			<label><input type="radio" name="two" value="DDR3L and DDR4" />DDR3L and DDR4</label>
