--- a/pages/parts/storage_nic_sc.inc.html
+++ b/pages/parts/storage_nic_sc.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Storage, Network Card and Sound Card" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=mb_gpu" />
-    <meta name="prev_page_name" content="[Parts] Motherboard and Video Card" />
+    <meta name="prev_page_name" content="Motherboard and Video Card" />
     <meta name="next_page_uri" content="?section=parts&amp;page=cooling_psu_case" />
-    <meta name="next_page_name" content="[Parts] Cooling, PSU and Case" />
+    <meta name="next_page_name" content="Cooling, PSU and Case" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Storage, Network Card and Sound Card</title>
@@ -27,7 +27,7 @@
 	  <p>HDD is the most used, cheapest and have a lot of space, SDD is beginning to take over for HDD, but is a bit pricier at the moment, you can have a lot of space but you have to pay.</p>
 	  <p>HDD comes commonly in to forms, 2,5" and 3,5" this is the size of the spinning disk inside, the outer dimensons is bigger but their are also standarliesed. 2,5" is used in laptops and small PCs and are a bit pricer than 3,5". 3,5" is used in desktop. What determens the speed of HDDs is the RPM on the spinning disk inside and number of plates. Normal RPM is 5400rpm and 7200rpm and normal storage space range from 100GB to 4000GB/4TB.</p>
 	  <p>SSD have many forms, the normal 2,5" size that is exasact the same size as 2,5" a HDD. But also we have M.2, U.2, and PCI forms. Speed of SSD can variy a bit, but one thing can we say for sure, it is much faster than a normal HDD. Speed of a normal consumer 2,5" SSD lays around 500MB/s read and write, but can reach up to 3000MB/s read and 1500MB/s write for the other SSDs markeed for the more extreme user that is willing to pay up.</p>
-	  
+
     </section>
 
     <section id="nic">
