--- a/pages/assembly/quiz.inc.html
+++ b/pages/assembly/quiz.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Quiz" />
     <meta name="prev_page_uri" content="?section=assembly&amp;page=software" />
-    <meta name="prev_page_name" content="[Assembling the PC] Software" />
+    <meta name="prev_page_name" content="Software" />
     <meta name="next_page_uri" content="" />
     <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="true" />
