--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Operating Systems" />
     <meta name="prev_page_uri" content="?section=vendors&amp;page=quiz" />
-    <meta name="prev_page_name" content="[Part Vendors] Quiz" />
+    <meta name="prev_page_name" content="Quiz" />
     <meta name="next_page_uri" content="?section=oss&amp;page=windows" />
-    <meta name="next_page_name" content="[Operating Systems] Windows" />
+    <meta name="next_page_name" content="Windows" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Operating Systems</title>
