--- a/pages/oss/osx.inc.html
+++ b/pages/oss/osx.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Mac OS X" />
     <meta name="prev_page_uri" content="?section=oss&amp;page=linux" />
-    <meta name="prev_page_name" content="[Operating Systems] Linux" />
+    <meta name="prev_page_name" content="Linux" />
     <meta name="next_page_uri" content="?section=oss&amp;page=quiz" />
-    <meta name="next_page_name" content="[Operating Systems] Quiz" />
+    <meta name="next_page_name" content="Quiz" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Operating Systems: Mac OS X</title>
