--- a/pages/parts/cooling_psu_case.inc.html
+++ b/pages/parts/cooling_psu_case.inc.html
@@ -9,9 +9,9 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Cooling, PSU and Case" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=storage_nic_sc" />
-    <meta name="prev_page_name" content="[Parts] Storage, Network Card and Sound Card" />
+    <meta name="prev_page_name" content="Storage, Network Card and Sound Card" />
     <meta name="next_page_uri" content="?section=parts&amp;page=accessories" />
-    <meta name="next_page_name" content="[Parts] Accessories" />
+    <meta name="next_page_name" content="Accessories" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Cooling, PSU and Case</title>
