--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="" />
     <meta name="prev_page_name" content="" />
     <meta name="next_page_uri" content="?section=parts&amp;page=cpu_ram" />
-    <meta name="next_page_name" content="[Parts] CPU and RAM" />
+    <meta name="next_page_name" content="CPU and RAM" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Parts</title>
