Gave comment more purpose in life.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ PORPOSE: Main webpage, loads content pages through AJAX.
         </div>
 
         <main id="content"></main>
-        <!-- This BR makes sure floating elements don't float into center element padding under footer. -->
+
+        <!-- Stops floaters and functions as prev_next_bar placeholder. -->
         <br class="clearfix" />
 
         <div id="prev_next_bar">
