Changed copyright line.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
             </ul>
           </div>
 
-          <p id="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc" target="_blank">github.com/build-a-pc</a></p>
+          <p id="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc" target="_blank">Ad Infinitum</a></p>
         </div>
       </div>
     </div>
