--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -23,7 +23,8 @@
         <h1><a href="#parts">Parts</a></h1>
       </header>
 
-      <p>This section is about the different parts you can have in a PC.</p>
+      <p>This section is about the different parts you can have in a PC. And some advices when you are buying parts.</p>
+	  <p>Remeber try out the quiz!</p>
 
       <h2 id="subpages"><a href="#subpages">Pages</a></h2>
       <ul>
