--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -91,7 +91,7 @@
             <p>Why would you buy LED bars/strips?</p>
             <label><input type="radio" name="eight" value="More heat in my PC" />More heat in my PC</label>
             <label><input type="radio" name="eight" value="Waste my money" />Waste my money</label>
-            <label><input type="radio" name="eight" value="Pipup my PC!" />Pipup my PC!</label>
+            <label><input type="radio" name="eight" value="Pipup my PC!" />Pimp up my PC!</label>
 			<label><input type="radio" name="eight" value="Sounds cool" />Sounds cool</label>
 			<label><input type="radio" name="eight" value="Braging rights" />Braging rights</label>
 			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
