Added more info on homepage

--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -23,8 +23,12 @@
         <h1><a href="#home">A PC Building Tutorial</a></h1>
       </header>
 
-      <p>This site will teach you about PC parts, part vendors, operating systems to consider using and how to actually assemble the parts into something useful.
-        If you want to search, if you find any problems or you want to check out the source for this page, check out the the footer.</p>
+      <p>This site will teach you about PC parts, part vendors, operating systems to consider using and how to actually assemble the parts into something useful.</p>
+	  <p>For navigating the page, you can use the navigation bar at the top of this page, or you can use the previous/next links at the bottom. Last resort you can use the site map or the search function.</p>
+	  <p>If you want to search, you will find a search box at the bottom of the page in the footer. The search function will search after the keyword/s on every page, and return matches in order they where found.</p>
+	  <p>Last in every section we have made a quiz that will test your knowledge and see if you have learned something, remember to take the quiz</p>
+	  <p>If you find any problems or you want to check out the source for this page, check out the footer.</p>
+		
 
       <br />
       <a class="section_link" href="?section=parts">1. Parts</a>
