--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -158,14 +158,14 @@
 			<p>Håvard must be given a medal for his work on the visuals of the page, where he created everything you see on the page from background, banner, footer, fonts. He basically created a template for us other to use. And his amazing work with implementing AJAX and the navigation bar. His AJAX code means that we can load only the parts of the webpage that changs not the entire page, this means all layout is in index.html the content loads from the respecting html files. Runar must be given the credits for the creation of the logo.</p>
 			<p>We are using external CSS files for styling, the same with JavaScript. They can be found in style/ and script/ folders in the project. When we are using external files like this we dont have to create a file for every page we create.</p>
 			<p>The Javascript files is going to be compined into 1 file, without unnecessary whitespace.</p>
-			<p>List of which JavaScript each person made.</p>
+			<p>List of which JavaScript each person made. Deadline for JavaScript 1.11</p>
 			<ul>
-			  <li>Petter made the search function for the site.</li>
-			  <li>Håvard made the AJAX function and also the javascript for the navigation bar.</li>
-			  <li>Runar made the validation function for the quizzes.</li>
-			  <li>Thomas made the breadcrumbs function for the site.</li>
+			  <li>Petter made the search function for the site. Was finished 1.11 but did bug fixing until 11.11</li>
+			  <li>Håvard made the AJAX function and also the javascript for the navigation bar. Finished before 1.11, including bugs</li>
+			  <li>Runar made the validation function for the quizzes. Finished 1.11 with the quiz function, but had to wait on the quizzes before testing it with the function</li>
+			  <li>Thomas made the breadcrumbs function for the site. Delivered the function on 11.11, and fixed some bugs on 13.11.</li>
 			</ul>
-			<p>List of what content each person made.</p>
+			<p>List of what content each person made. Deadline early 13.11.</p>
 			<ul>
 			  <li>Petter made the content for the section Parts.</li>
 			  <li>Håvard made the content for the section Assembling a PC.</li>
