--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -148,10 +148,6 @@
             </ul>
 			
 			<header>
-              <h2><a href="#content">Content</a></h1>
-            </header>
-			
-			<header>
               <h2><a href="#min_req">Minimum Requirements</a></h1>
             </header>
 			<p>Everyone fulfilled their minimum requirements. Created 1 JavaScript each, and made the content for their assigned section.</p>
@@ -160,9 +156,9 @@
 			<p>The Javascript files is going to be compined into 1 file, without unnecessary whitespace.</p>
 			<p>List of which JavaScript each person made. Deadline for JavaScript 1.11</p>
 			<ul>
-			  <li>Petter made the search function for the site. Was finished 1.11 but did bug fixing until 11.11</li>
-			  <li>Håvard made the AJAX function and also the javascript for the navigation bar. Finished before 1.11, including bugs</li>
-			  <li>Runar made the validation function for the quizzes. Finished 1.11 with the quiz function, but had to wait on the quizzes before testing it with the function</li>
+			  <li>Petter made the search function for the site. Was finished 1.11 but did bug fixing until 11.11.</li>
+			  <li>Håvard made the AJAX function and also the javascript for the navigation bar. Finished before 1.11, including bugs.</li>
+			  <li>Runar made the validation function for the quizzes. Finished 1.11 with the quiz function, but had to wait on the quizzes before testing it with the function.</li>
 			  <li>Thomas made the breadcrumbs function for the site. Delivered the function on 11.11, and fixed some bugs on 13.11.</li>
 			</ul>
 			<p>List of what content each person made. Deadline early 13.11.</p>
