Added content for Linux

--- a/pages/oss/linux.inc.html
+++ b/pages/oss/linux.inc.html
@@ -23,7 +23,18 @@
         <h1><a href="#linux">Linux</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Linux, just like Windows, is a computer operating system. Linux was assembled under the 
+model of free and open-source software development and distribution. Linux was released in 1991, 25 years ago.</p>
+      <p>Linux was developed as a free operating system for personal computers, but has since its release been ported 
+onto more platforms than any other operating system. Because of the dominance of Android on smartphones, Linux has the 
+largest installed base of all general-purpose operating systems.</p>
+      <p>Linux is also the leading operating system when it comes to servers and other systems like mainframe computers and 
+supercomputers. Linux also runs on the embedded systems, which means it runs on devices whose operating system is built into 
+the firmware and is highly tailored to the system. Despite of the popularity Linux has on all the platforms combined, 
+it is only used on ca 2.3% of desktop computers.</p>
+      <p>Development of the Linux operating system is one of the most pominent results of open-source software collaboration. 
+The underlying source code for Linux may be used, modified and distributed by anyone. Because of this, there exists multiple 
+versions of Linux. Some of the mist popular mainstream ones are Debian, Linux Mint, openSUSE, Mageia, Arch Linux etc.</p>
     </section>
   </body>
 </html>
