--- a/pages/oss/linux.inc.html
+++ b/pages/oss/linux.inc.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Operating Systems" />
-    <meta name="author" content="Thomas" />
+    <meta name="author" content="Runar" />
     <meta name="section" content="oss" />
     <meta name="page" content="linux" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Linux" />
     <meta name="prev_page_uri" content="?section=oss&amp;page=windows" />
     <meta name="prev_page_name" content="Windows" />
-    <meta name="next_page_uri" content="?section=oss&amp;page=osx" />
-    <meta name="next_page_name" content="Mac OS X" />
+    <meta name="next_page_uri" content="?section=oss&amp;page=quiz" />
+    <meta name="next_page_name" content="Quiz" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Operating Systems: Linux</title>
