--- a/pages/oss/windows.inc.html
+++ b/pages/oss/windows.inc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Operating Systems" />
-    <meta name="author" content="Thomas" />
+    <meta name="author" content="Runar" />
     <meta name="section" content="oss" />
     <meta name="page" content="windows" />
     <meta name="section_name" content="Operating Systems" />
