--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -23,7 +23,7 @@
         <h1><a href="#oss">Operating Systems</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>This section contains information about the different operating systems you can install on your PC.</p>
 
       <h2 id="subpages"><a href="#subpages">Pages</a></h2>
       <ul>
