--- a/pages/oss/quiz.inc.html
+++ b/pages/oss/quiz.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="quiz" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Quiz" />
-    <meta name="prev_page_uri" content="?section=oss&amp;page=linux" />
-    <meta name="prev_page_name" content="Linux" />
+    <meta name="prev_page_uri" content="?section=oss&amp;page=osx" />
+    <meta name="prev_page_name" content="Max OS X" />
     <meta name="next_page_uri" content="?section=assembly" />
     <meta name="next_page_name" content="Assembling the PC" />
     <meta name="show_breadcrumbs" content="true" />
@@ -40,6 +40,22 @@
             <label><input type="radio" name="two" value="Lenovo" /> Lenovo</label>
             <label><input type="radio" name="two" value="Google" /> Google</label>
             <input type="hidden" name="two_answer" value="Microsoft" />
+          </li>
+          <li>
+            <p>When was Linux released?</p>
+            <label><input type="radio" name="three" value="1987" /> 1987</label>
+            <label><input type="radio" name="three" value="1989" /> 1989</label>
+            <label><input type="radio" name="three" value="1991" /> 1991</label>
+            <label><input type="radio" name="three" value="1993" /> 1993</label>
+            <input type="hidden" name="three_answer" value="1991" />
+          </li>
+          <li>
+            <p>Approximately how many % of desktop users use Linux?</p>
+            <label><input type="radio" name="four" value="2.0" /> 2.0%</label>
+            <label><input type="radio" name="four" value="2.1" /> 2.1%</label>
+            <label><input type="radio" name="four" value="2.2" /> 2.2%</label>
+            <label><input type="radio" name="four" value="2.3" /> 2.3%</label>
+            <input type="hidden" name="four_answer" value="2.3" />
           </li>
         </ol>
         <button type="button" value="Lock in answers" onclick="validateRadio()">Lock in answers</button>
