--- a/pages/oss/quiz.inc.html
+++ b/pages/oss/quiz.inc.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Quiz" />
-    <meta name="author" content="Thomas" />
+    <meta name="author" content="Runar" />
     <meta name="section" content="oss" />
     <meta name="page" content="quiz" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Quiz" />
-    <meta name="next_page_uri" content="?section=oss&amp;page=quiz" />
-    <meta name="next_page_name" content="Quiz" />
+    <meta name="prev_page_uri" content="?section=oss&amp;page=linux" />
+    <meta name="prev_page_name" content="Linux" />
     <meta name="next_page_uri" content="?section=assembly" />
     <meta name="next_page_name" content="Assembling the PC" />
     <meta name="show_breadcrumbs" content="true" />
